Fix: change OAuth2CleintConfig.java